@@ -22,13 +22,13 @@ export(
   calibVars,
   calibSample,
   contingencyWt,
+  meanWt,
   corWt,
   covWt,
   getBreaks,
   getCat,
   ipu,
   manageSynthPopObj,
-  meanWt,
   quantileWt,
   sampHH,
   simCategorical,
@@ -56,6 +56,15 @@ exportClasses(
 )
 
 ## register methods for S3 generics defined in this package
+
+# methods for S3 generic 'meanWt'
+S3method(meanWt, default)
+S3method(meanWt, dataObj)
+
+# methods for S3 generic 'varWt'
+S3method(varWt, default)
+S3method(varWt, dataObj)
+
 # methods for S3 generic 'contingencyWt'
 S3method(contingencyWt, default)
 S3method(contingencyWt, matrix)
