@@ -352,15 +352,40 @@ minDist <- function(i, indDonors, donors) {
 
 
 ## weighted mean
-meanWt <- function(x, weights, na.rm = TRUE) {
+meanWt <- function(x, ...) UseMethod("meanWt")
+
+meanWt.default <- function(x, weights, na.rm = TRUE) {
   na.rm <- isTRUE(na.rm)
   if(missing(weights)) mean(x, na.rm=na.rm)
   else weighted.mean(x, w=weights, na.rm=na.rm)
 }
 
+meanWt.dataObj <- function(x, vars, na.rm = TRUE) {
+  dat <- x@data
+  if ( is.null(dat) ) {
+    return(NULL)
+  } else {
+    if ( length(vars) > 1 ) {
+      stop("only one variable can be specified!\n")
+    }
+    ii <- match(vars, colnames(dat))
+    if ( any(is.na(ii)) ) {
+      stop("please provide valid variables that exist in the input object!\n")
+    }
+    tmpdat <- dat[[vars]]
+    if ( !is.null(x@weight) ) {
+      return(meanWt.default(tmpdat, weights=dat[[x@weight]], na.rm=na.rm))
+    } else {
+      return(meanWt.default(tmpdat, na.rm=na.rm))
+    }
+  }
+}
+
 
 ## weighted variance
-varWt <- function(x, weights, na.rm = TRUE) {
+varWt <- function(x, ...) UseMethod("varWt")
+
+varWt.default <- function(x, weights, na.rm = TRUE) {
   na.rm <- isTRUE(na.rm)
   if(missing(weights)) var(x, na.rm=na.rm)
   else {
@@ -379,6 +404,26 @@ varWt <- function(x, weights, na.rm = TRUE) {
   }
 }
 
+varWt.dataObj <- function(x, vars, na.rm=TRUE) {
+  dat <- x@data
+  if ( is.null(dat) ) {
+    return(NULL)
+  } else {
+    if ( length(vars) > 1 ) {
+      stop("only one variable can be specified!\n")
+    }
+    ii <- match(vars, colnames(dat))
+    if ( any(is.na(ii)) ) {
+      stop("please provide valid variables that exist in the input object!\n")
+    }
+    tmpdat <- dat[[vars]]
+    if ( !is.null(x@weight) ) {
+      return(varWt.default(tmpdat, weights=dat[[x@weight]], na.rm=na.rm))
+    } else {
+      return(varWt.default(tmpdat, na.rm=na.rm))
+    }
+  }
+}
 
 ## weighted covariance matrix
 
